--- a/pom.xml
+++ b/pom.xml
@@ -19,12 +19,14 @@
 
     <dependencies>
         <!--        Uncomment the following lines to use CPLEX:-->
-<!--        <dependency>-->
-<!--            <groupId>cplex</groupId>-->
-<!--            <artifactId>cplex</artifactId>-->
-<!--            <version>22.11</version>-->
-<!--            <scope>compile</scope>-->
-<!--        </dependency>-->
+        <!-- https://mvnrepository.com/artifact/cplex/cplex -->
+        <dependency>
+            <groupId>cplex</groupId>
+            <artifactId>cplex</artifactId>
+            <version>22.11</version>
+            <scope>compile</scope>
+        </dependency>
+
         <!--        Uncomment the following lines to use OR-Tools:-->
 <!--        <dependency>-->
 <!--            <groupId>com.google.ortools</groupId>-->
